tests/NormalTests/paczka1/fuzzy1/67725032.err
Error in line 7: lWAnlzg A654 10,94
Error in line 14: A654 S133 26,5
Error in line 23: lWAnlzg A50 83,2
Error in line 29: ZnPe4C0gia S133 84,5
Error in line 26: lWAnlzg A654 80,6
Error in line 27: A654 S133 50,1
